--- a/404.html
+++ b/404.html
@@ -143,7 +143,7 @@
                 <h1>Oops!</h1>
                 <h2>404 - The Page can't be found</h2>
             </div>
-            <a href="/">Go TO Homepage</a>
+            <a href="/index.html">Go TO Homepage</a>
 
         </div>
     </div>
