--- a/articles.html
+++ b/articles.html
@@ -72,8 +72,8 @@
     <section class="ftco-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="case">
+                <div class="col-md-12 body-wrapper">
+                    <!-- <div class="case">
                         <div class="row">
                             <div class="col-md-6 col-lg-6 col-xl-8 d-flex">
                                 <a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_1.jpg);"></a>
@@ -94,27 +94,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="case">
-                        <div class="row">
-                            <div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-                                <a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_2.jpg);"></a>
-                            </div>
-                            <div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-                                <div class="text w-100 pl-md-3">
-                                    <span class="subheading">Application</span>
-                                    <h2><a href="blog-single.html">Build a website in minutes with Adobe Templates</a></h2>
-                                    <ul class="media-social list-unstyled">
-                                        <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                                        <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                                        <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                                    </ul>
-                                    <div class="meta">
-                                        <p class="mb-0"><a href="#">11/13/2019</a> | <a href="#">12 min read</a></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                   
                     <div class="case">
                         <div class="row">
                             <div class="col-md-6 col-lg-6 col-xl-8 d-flex">
@@ -261,7 +241,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="row mt-5">
@@ -380,7 +360,7 @@
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
-
+    <script src="./js/content.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
