--- a/articles.html
+++ b/articles.html
@@ -35,8 +35,8 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="articles.html" class="nav-link">Articles</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item active"><a href="articles.html" class="nav-link">Articles</a></li>
                     <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
@@ -278,24 +278,24 @@
                 </div>
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">latest News</h2>
-                        <div class="block-21 mb-4 d-flex">
-                            <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
-                            <div class="text">
-                                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                                <div class="meta">
-                                    <div>
-                                        <a href="#"></span> Oct. 16, 2019</a>
-                                    </div>
-                                    <div>
-                                        <a href="#"></span> Admin</a>
-                                    </div>
-                                    <div>
-                                        <a href="#"></span> 19</a>
+                        <h2 class="ftco-heading-2 latest">latest News</h2>
+                        <!-- <div class="block-21 mb-4 d-flex">
+                                <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
+                                <div class="text">
+                                    <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+                                    <div class="meta">
+                                        <div>
+                                            <a href="#"></span> Oct. 16, 2019</a>
+                                        </div>
+                                        <div>
+                                            <a href="#"></span> Admin</a>
+                                        </div>
+                                        <div>
+                                            <a href="#"></span> 19</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                         <div class="block-21 mb-4 d-flex">
                             <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
                             <div class="text">
@@ -312,7 +312,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="col-md">
@@ -360,7 +360,7 @@
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
-    <script src="./js/content.js"></script>
+    <script src="js/content.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
