--- a/contact.html
+++ b/contact.html
@@ -123,8 +123,8 @@
                     </div>
                 </div>
                 <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2 latest">Latest News</h2>
+                    <div class="ftco-footer-widget mb-4 latest-footer">
+                        <h2 class="ftco-heading-2">Latest News</h2>
                         <!-- <div class="block-21 mb-4 d-flex">
                             <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
                             <div class="text">
@@ -229,7 +229,7 @@
     </script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
-
+    <script src="js/footer.js"></script>
 </body>
 
 </html>
