--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     </div>
                 </div>
                 <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2 latest">Latest News</h2>
+                    <div class="ftco-footer-widget mb-4 latest-footer">
+                        <h2 class="ftco-heading-2">Latest News</h2>
                         <!-- <div class="block-21 mb-4 d-flex">
                             <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
                             <div class="text">
@@ -223,6 +223,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/footer.js"></script>
 
 </body>
 
